--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.datasource.password=Moneyroutine01@
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+upload.directory=/Users/jangjaesang/projectImage/
