--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/backend
 spring.datasource.username=root
 spring.datasource.password=Moneyroutine01@
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
