--- a/BackEnd/build.gradle
+++ b/BackEnd/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'javax.xml.bind:jaxb-api:2.3.1'
 	runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
 tasks.named('test') {
